--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,64 @@
 .read-the-docs {
   color: #888;
 }
+
+/* App styles */
+.mainHeader {
+  padding: 20px 30px;
+  display: flex;
+  align-items: center;
+  background-color: #282727;
+  color: white;
+}
+
+.headerText {
+  font-size: 24px;
+  margin: 0px 10px;
+}
+
+.passageLogo {
+  background-image: url("https://storage.googleapis.com/passage-docs/passage-logo-dark.svg");
+  background-repeat: no-repeat;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
+.link {
+  margin-left: 20px;
+  color: white;
+  text-decoration-color: white;
+}
+
+.mainContainer {
+  background: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  width: 310px;
+  min-height: 310px;
+  margin: 30px auto;
+}
+.footer {
+  text-align: center;
+  font-size: 18px;
+}
+
+.dashboard {
+  padding: 30px 30px 20px;
+}
+.title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.message {
+  overflow-wrap: anywhere;
+}
+.dashboard .link {
+  color: black;
+  text-decoration-color: black;
+}
